--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ replit = "^3.2.4"
 Flask = "^2.2.0"
 urllib3 = "^1.26.12"
 openai = "^0.27.8"
+matplotlib = "^3.7.1"
+networkx = "^3.1"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
